@@ -1,3 +1,8 @@
+Tue Mar  9 01:54:20 GMT 2004  Colin Watson  <cjwatson@debian.org>
+
+	* zsoelim/zsoelim.l: Long-overdue style cleanup per docs/HACKING. No
+	  functional changes.
+
 Tue Mar  9 00:37:23 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	Roll out the new pipeline library in most programs.
